feat: adding photos and adding new style in other pages from peru gourmet

--- a/perugourmet/dessert.css
+++ b/perugourmet/dessert.css
@@ -133,4 +133,14 @@ img {
 }
 
 
+/* INTRODUCCION  DESSERTS */
+
+.introduction {
+  margin: 5%;
+  border-style: solid;
+  border-color: red;
+  border-radius: 1%;
+  padding-right: 5%;
+}
+
 
