--- a/tourperu/ancash.css
+++ b/tourperu/ancash.css
@@ -1,3 +1,73 @@
+
+/*  ANIMATION AT THE TOP */
+
+
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Century;
+
+}
+
+header{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    height: 80vh;
+    background-size: cover;
+    background-position: center;
+    min-height: 100px;
+
+    animation-name: animate;
+    animation-direction: alternate-reverse;
+    animation-duration: 30s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+
+
+
+
+
+}
+
+@keyframes animate {
+    0% {
+        background-image: url(../tourperu/fotoancash/fotoancash2.png);
+     
+    }20% {
+        background-image: url(../tourperu/fotoancash/fotoancash3.png);
+    }40% {
+        background-image: url(../tourperu/fotoancash/fotoancash4.png);
+    }60% {
+        background-image: url(../tourperu/fotoancash/fotoancash5.png);
+    }80% {
+        background-image: url(../tourperu/fotoancash/Sin\ título.png);
+                
+    }
+
+}
+
+.container2 {
+
+    font-family: Century;
+    position: absolute;
+    top: 110%;
+    left: 5%;
+    font-size: 25px;
+    text-decoration: none;
+    color: #fff;
+    padding: 5px 20px;
+    border: 1px solid transparent;
+    transition: 0.5 ease;
+}
+
+
+
+
+/* CARDS ANIMATIONS*/
+
+
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
 
     *,
