Feat: adding photos to each page

--- a/tourperu/ayacucho.css
+++ b/tourperu/ayacucho.css
@@ -24,17 +24,17 @@ header{
 
 @keyframes animate {
     0% {
-        background-image: url(../tourperu/fotoancash/mountainsancash.png);     
+        background-image: url(./ayacuchofotos/ayacuchofoto.png);     
     }20% {
-        background-image: url(../tourperu/fotoancash/fotoancash2.png);
+        background-image: url(./ayacuchofotos/ayacuchofoto1.png);
     }40% {
-        background-image: url(../tourperu/fotoancash/fotoancash4.png);
+        background-image: url(./ayacuchofotos/ayacuchofoto2.png);
     }60% {
-        background-image: url(../tourperu/fotoancash/fotoancash5.png);
+        background-image: url(./ayacuchofotos/ayacuchofoto3.png);
     }80% {
-        background-image: url(../tourperu/fotoancash/mountainsancash.png);            
+        background-image: url(./ayacuchofotos/ayacuchofoto4.png);            
     }100% {
-        background-image: url(../tourperu/fotoancash/fotoancash4.png);            
+        background-image: url(./ayacuchofotos/ayacuchofoto1.png);            
     }
 
 
