--- a/tourperu/puno.css
+++ b/tourperu/puno.css
@@ -24,17 +24,17 @@ header{
 
 @keyframes animate {
     0% {
-        background-image: url(../tourperu/fotoancash/mountainsancash.png);     
+        background-image: url(./punofotos/PUNO1.png);     
     }20% {
-        background-image: url(../tourperu/fotoancash/fotoancash2.png);
+        background-image: url(./punofotos/puno2.png);
     }40% {
-        background-image: url(../tourperu/fotoancash/fotoancash4.png);
+        background-image: url(./punofotos/fotos3.png);
     }60% {
-        background-image: url(../tourperu/fotoancash/fotoancash5.png);
+        background-image: url(./punofotos/png4.png);
     }80% {
-        background-image: url(../tourperu/fotoancash/mountainsancash.png);            
+        background-image: url(./punofotos/foto5.png);            
     }100% {
-        background-image: url(../tourperu/fotoancash/fotoancash4.png);            
+        background-image: url(./punofotos/fotos6.png);            
     }
 
 
