--- a/tourperu/ancash.css
+++ b/tourperu/ancash.css
@@ -87,7 +87,7 @@ header{
         z-index: 1;
         max-width: 500px;
         height: 430px;
-        margin: 40px 40px 30px 70px;
+        margin: 60px 40px 30px 70px;  /* margenes de boxes*/
         box-shadow: 0 6px 30px 0 rgba(0, 0, 0, .12);
         overflow: hidden;
         width: 23.333%;
@@ -217,3 +217,145 @@ header{
     .shape-box_half:hover>.after {
         opacity: 1;
     }
+
+
+
+
+  /*  -----------------MAP OF THE AIRPLANE AND DESCRIPTION ------------------- */    
+  
+@font-face {
+    font-family: brown;
+    src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/130875/Brown-Regular.otf);
+}
+@font-face {
+    font-family: didot;
+    src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/130875/Didot.ttc);
+}
+
+body {
+  padding-top: 0vh;
+  padding-bottom: 0vh;
+}
+
+.card {
+  display: flex;
+  margin: 0 auto;
+  width: 850px;
+  box-shadow: -2px 2px 21px 0px rgba(0,0,0,0.23);
+  overflow:hidden;
+  animation-duration: 650ms;
+    @media (max-width: 900px) {
+    width: 88%;
+    flex-wrap:wrap;
+  }
+}
+
+.card__img {
+  display: block;
+  width: 50%;
+  background-image: url('./fotoancash/fotomapa1.png');
+  background-size: 18cm;
+  background-position: center bottom;
+  animation-delay: 500ms;
+  transition: height .2s ease, width .2s ease;
+
+  @media (max-width: 900px) {
+    width: 100%;
+    height: 375px;
+    background-position: center center;
+    
+  }
+  
+  @media (max-width: 750px) {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/130875/james2-sm.jpg);
+  }
+    @media (max-width: 525px) {
+    height:250px;
+  }
+}
+
+.card__content {
+  width: 50%;
+    @media (max-width: 900px) {
+    width: 100%;
+  }
+}
+body {
+    padding-top: 0vh;
+    padding-bottom:12vh;
+  }
+
+.card__title {
+  position: relative;
+  left: 50px; /*move the title box*/
+  width: 100%;
+  margin-bottom: 50px;
+  padding-left: 10px; /* title card*/
+  padding-top: 60px;
+  border-left: 3px solid #67D5B5;
+  color: #52616a;
+  font-family: 'brown';
+  font-size: 40px;
+  text-transform: uppercase;
+  animation-delay: 500ms;
+  transition: all .2s ease;
+  
+  @media (max-width: 525px) {
+    tranistion: all .2s ease-in;
+    font-size: 36px;
+  }
+  @media (max-width: 900px) {
+    left: 0;
+    margin-bottom: 0;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+  
+  span {
+    display: block;
+    position: relative;
+    top:5px;  
+    
+    line-height: .85;
+    opacity:.85;
+  }
+  span.small {
+    position: relative;
+    top: -2px;
+    opacity: 1;
+    font-size: 20px;
+    color:#67D5B5;
+  }
+  
+}
+
+.card__quote {
+  width: 72%;
+  padding-left: 15px;
+  margin-left: 50px;
+  padding-bottom: 60px;
+  border-left: 3px solid #67D5B5;
+  font-family: 'open sans';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.6;
+  color: #52616a;
+  animation-delay: 500ms;
+  transition: all .2s ease;
+    @media (max-width: 900px) {
+    left: 0;
+    margin-left: 0;
+    padding-top: 20px;
+    padding-bottom: 40px;
+  }
+  @media (max-width: 525px) {
+    width: 88%;
+  }
+  span {
+    position: relative;
+    top: -4px;
+  }
+}
+
+
+/* */ 
